--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       object-fit: cover;
       /* Ensures the image covers the entire container without distortion */
     }
+    
     .logo {
-    max-width: 100px; /* Set a specific maximum width */
+    max-width:  85%; /* Set a specific maximum width */
     height: auto; /* Ensure the height adjusts based on the width */
 }
 
