--- a/serviceDetails.html
+++ b/serviceDetails.html
@@ -37,6 +37,17 @@
       color: inherit;
       text-decoration: none;
     }
+    .logo {
+    max-width:  85%; /* Set a specific maximum width */
+    height: auto; /* Ensure the height adjusts based on the width */
+}
+
+/* Media query for smaller devices like iPhones */
+@media only screen and (max-width: 600px) {
+    .logo {
+        max-width: 80px; /* Adjust the size for smaller screens */
+    }
+}
   </style>
 </head>
 
@@ -47,7 +58,7 @@
 
       <div class="logo d-flex align-items-center">
         <a href="index.html">
-          <img src="img/favicon.png" alt="Logo" style="width: 100%; height: 100%;">
+          <img src="img/favicon.png" alt="Logo" class="logo">
         </a>
         <h4 class="sitename">Jasa Perkasa Security</h4>
       </div>
