--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Jasa Perkasa Security SDN BHD</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Jasa Perkasa Security SDN BHD - Professional Security Guard Services</title>
+  <meta name="description" content="Jasa Perkasa Security SDN BHD provides reliable and professional security guard services. Specializing in static guard services, we ensure safety and security for your business.">
+  <meta name="keywords" content="security, guard services, Jasa Perkasa Security, static guards, professional security, SeGuMaS">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
