--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Jasa Perkasa Security SDN BHD - Professional Security Guard Services</title>
-  <meta name="description" content="Jasa Perkasa Security SDN BHD provides reliable and professional security guard services. Specializing in static guard services, we ensure safety and security for your business.">
-  <meta name="keywords" content="security, guard services, Jasa Perkasa Security, static guards, professional security, SeGuMaS">
+  <title>Jasa Perkasa Security SDN BHD</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -29,13 +29,6 @@
   <!-- Main CSS File -->
   <link href="css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Hidayah
-  * Template URL: https://bootstrapmade.com/hidayah-free-simple-html-template-for-corporate/
-  * Updated: Aug 01 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   <style>
     .no-link-style {
       color: inherit;
@@ -55,18 +48,6 @@
       object-fit: cover;
       /* Ensures the image covers the entire container without distortion */
     }
-    
-    .logo {
-    max-width:  85%; /* Set a specific maximum width */
-    height: auto; /* Ensure the height adjusts based on the width */
-}
-
-/* Media query for smaller devices like iPhones */
-@media only screen and (max-width: 600px) {
-    .logo {
-        max-width: 80px; /* Adjust the size for smaller screens */
-    }
-}
   </style>
 </head>
 
@@ -79,7 +60,7 @@
         <a href="index.html">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="img/favicon.png" alt="Logo" class="logo">
+          <img src="img/favicon.png" alt="Logo" style="width: 85%; height: 100%;">
         </a>
         <h4 class="sitename">Jasa Perkasa Security</h4>
       </div>
@@ -145,7 +126,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="img/hero-carousel/head1.jpeg" alt="">
+          <img src="img/hero-carousel/guardBrief.jpeg" alt="">
           <div class="carousel-container">
             <h2>MOTO</h2>
             <p>Efficient & Integrity-Driven</p>
@@ -248,7 +229,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="?" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1"
                 class="purecounter"></span>
               <p><strong>Number of Clients</strong></p>
             </div>
@@ -257,7 +238,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="?" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="285" data-purecounter-duration="1"
                 class="purecounter"></span>
               <p><strong>Security Contracts</strong></p>
             </div>
@@ -275,7 +256,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="?" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1"
                 class="purecounter"></span>
               <p><strong>Certified Guards</strong></p>
             </div>
@@ -376,6 +357,7 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 isotope-container" data-aos="fade-up" data-aos-delay="200">
+            <!-- Project Items -->
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
               <div class="portfolio-content h-100">
                 <img src="img/hero-carousel/head2.jpeg" class="img-fluid" alt="">
@@ -396,6 +378,19 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
+              <div class="portfolio-content h-100">
+                <img src="img/hero-carousel/head3.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <a href="img/hero-carousel/head3.jpeg" data-gallery="portfolio-gallery-project"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            
+
+            <!-- Guard Items -->
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-guard">
               <div class="portfolio-content h-100">
                 <img src="img/service1.jpeg" class="img-fluid" alt="">
@@ -426,6 +421,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <!-- Ethics Items -->
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-ethic">
               <div class="portfolio-content h-100">
                 <img src="img/portfolio/ethic1.jpg" class="img-fluid" alt="">
@@ -446,14 +442,13 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <!-- Repeat for other items... -->
-
           </div><!-- End Portfolio Container -->
 
         </div>
       </div>
 
     </section><!-- /Portfolio Section -->
+
 
 
     <!-- Team Section -->
@@ -467,73 +462,70 @@
 
       <div class="container">
 
+        <!-- Organization Member - Smaller and Centered -->
         <div class="row justify-content-center gy-4">
+          <!-- Organization Member (Smaller Width) -->
+          <div class="col-lg-8 col-md-10" data-aos="fade-up" data-aos-delay="100">
+            <div class="member text-center">
+              <img src="img/team/organizationChart.jpg" class="img-fluid" alt="Jasa Perkasa Organization Chart"
+                style="max-width: 80%; height: auto;"> <!-- Adjusted image size -->
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4 style="font-size: 1.25rem;">Jasa Perkasa Organization Chart</h4> <!-- Smaller font size -->
+                </div>
+              </div>
+            </div>
+          </div><!-- End Organization Member -->
+        </div>
 
-          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="100">
+
+        <!-- Other Team Members - Below the Organization Member -->
+        <div class="row justify-content-center gy-4 mt-5">
+          <!-- Team Member 2 -->
+          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="img/team/team-1.jpg" class="img-fluid" alt="">
+              <img src="img/team/team-1.jpg" class="img-fluid" alt="Prof Dato Ts. Dr. Aziz Bin Deraman">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Prof Dato Ts. Dr. Aziz Bin Deraman</h4>
-                  <span>
-                    <h5 style="color: wheat;">Executive Chairman</h5>
-                  </span>
+                  <h5 style="color: wheat;">Executive Chairman</h5>
                 </div>
-                <!-- <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!-- End Team Member 2 -->
 
-          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="200">
+          <!-- Team Member 3 -->
+          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="img/team/emy.jpg" class="img-fluid" alt="">
+              <img src="img/team/emy.jpg" class="img-fluid" alt="Amir Zulhilmi Bin Dato’ Seri Ismail">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amir Zulhilmi Bin Dato’ Seri Ismail</h4>
-                  <span>
-                    <h5 style="color: wheat;">Managing Director</h5>
-                  </span>
+                  <h5 style="color: wheat;">Managing Director</h5>
                 </div>
-                <!-- <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!-- End Team Member 3 -->
 
-          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="300">
+          <!-- Team Member 4 -->
+          <div class="col-xl-4 col-lg-5 col-md-7" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="img/team/EnNasri.jpg" class="img-fluid" alt="">
+              <img src="img/team/EnNasri.jpg" class="img-fluid" alt="Mohd Nasri Bin Mohd Yusoff">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Mohd Nasri Bin Mohd Yusoff</h4>
-                  <span>
-                    <h5 style="color: wheat;">Manager</h5>
-                  </span>
+                  <h5 style="color: wheat;">Manager</h5>
                 </div>
-                <!-- <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div><!-- End Team Member 4 -->
 
-        </div>
+        </div><!-- End Row -->
 
-      </div>
+      </div><!-- End Container -->
 
     </section><!-- /Team Section -->
+
 
 
     <!-- Contact Section -->
@@ -728,17 +720,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="vendor/php-email-form/validate.js"></script>
-<script src="vendor/aos/aos.js"></script>
-<script src="vendor/glightbox/js/glightbox.min.js"></script>
-<script src="vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-<script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
+  <script src="vendor/aos/aos.js"></script>
+  <script src="vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="vendor/swiper/swiper-bundle.min.js"></script>
 
-<!-- Main JS File -->
-<script src="js/main.js"></script>
+  <!-- Main JS File -->
+  <script src="js/main.js"></script>
 
 </body>
 
