--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="img/favicon.png" rel="icon" type="image/png">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
