--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
           <div class="col-lg-4 position-relative" data-aos="fade-up" data-aos-delay="200">
             <div class="d-none d-lg-block" style="height: 250px;"></div>
-            <img src="img/favicon.png" class="img-fluid" alt="">
+            <img src="img/favicon1.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-7 content ps-lg-4" data-aos="fade-up" data-aos-delay="100">
